styles/style.css
body {
    margin: 0px;
}

/* App.css */
.main {
    display: flex;
    flex-direction: row;
}

.left_main {
    position: sticky;
    top: 0px;
    width: 9rem;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #181818;
    /* border-right: 1px solid #909096; */
}

.right_main {
    display: flex;
    flex-direction: column;
    background-color: #1D1D1D;
    width: 100vw;
}


/* Navbar.css */


/* Will add flex class to any div so as to make it a flex box */
.flex {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
a{
    text-decoration: none;
}
.top {
    text-align: center;
    width: 100%;
    height: 33%;
}

.middle {
    width: 100%;
    height: 34%;
}

.bottom {
    text-align: center;
    height: 33%;
}

/* Hovering on any of the main sections  */
.main-sections {
    height: inherit;
    font-size: 16px;
    color: #909096;
    font-family: "Open Sans", sans-serif;
    border-bottom: 1px solid #282828;
    width: 100%;
}

.main-sections:hover {
    color: #0DFDD7;
    cursor: pointer;
}

/* Icon styling */
svg {
    padding: 5px;
    color: #909096;
}

.logo-img {
    width: 50px;
}


/* Main.css */

.parent_container {
    display: flex;
    flex-direction: column;
}

.common_property {
    display: flex;
    flex-direction: column;
    color: white;
    height: 100vh;
    overflow: scroll;

}

.skills_section {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.skills {
    display: flex;
    flex-direction: column;
}

.projects_grid {
    display: grid;
    width: 80%;
    gap: 1rem;
    justify-content: center;
    grid-template-columns: 33% 33% 33%;
}

.grid_item_common {
    border: 1px solid white;
    background-color: aqua;
    color: black;
}

/*     Importing Google fonts    */
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');


/* Applying CSS to sphere */
.tagcloud {
    display: flex;
    font-weight: bold;
    font-family: "Open Sans", sans-serif;
    letter-spacing: 1px;
    font-size: 20px;
}

.Sphere {
    display: flex;
    justify-content: center;
    align-items: center;
}

/* Map in contacts */
.map {
    margin-top: 25px;
    width: 700px;
    height: 770px;
}

/* Jelly Bounce Text */

.jelly-text-1 {
    display: flex;
    flex-direction: row;
}

.jelly-text-2 {
    display: flex;
    flex-direction: row;
}

.jelly-text-3 {
    display: flex;
    flex-direction: row;
}

.jelly-text-4 {
    display: flex;
    flex-direction: row;
}

.jelly-text-5 {
    display: flex;
    flex-direction: row;
}

.jelly-text-6 {
    display: flex;
    flex-direction: row;
}

button {
    background-color: transparent;
    color: white;
    font-family: 'Maven Pro', sans-serif;
    border: none;
    font-size: 70px;
    display: flex;
}

button:hover {
    color: #0DFDD7;
    animation: animate 0.6s;
    text-shadow: none;
}

@keyframes animate {
    25% {
        transform: scale(0.8, 1.3);
    }

    50% {
        transform: scale(1.1, 0.8);
    }

    75% {
        transform: scale(0.7, 1.2);
    }
}

.ASH {
    position: relative;
    left: 30px;
}

.ASI {
    position: relative;
    left: 16px;
}

.ASCOMMA {
    position: relative;
    left: 2px;
}

.ASI2 {
    position: relative;
    left: 30px;
}

.ASAPOSTROPHE {
    position: relative;
    left: 15px;
}

.ASM {
    position: relative;
    left: 2px;
}

.ASA {
    position: relative;
    left: 20px;
}

.ASM2 {
    position: relative;
    left: 10px;
}

.ASA2 {
    position: relative;
    left: 0px;
}

.ASN {
    position: relative;
    left: -10px;
}

.ASG {
    position: relative;
    left: 5px;
}

.ASU {
    position: relative;
    left: -8px;
}

.ASP {
    position: relative;
    left: -19px;
}

.AST {
    position: relative;
    left: -29px;
}

.ASA3 {
    position: relative;
    left: -39px;
}

.ASDOT {
    position: relative;
    left: -48px;
}

.jelly-text-1::after {
    content: '<h1>';
    font-family: 'La Belle Aurore', cursive;
    color: #515152;
    font-size: 1.3rem;
    position: relative;
    top: -23px;
    left: -110px;
}

.jelly-text-2::after {
    content: '</h1>';
    font-family: 'La Belle Aurore', cursive;
    color: #515152;
    font-size: 1.3rem;
    position: relative;
    top: 60px;
    left: -37px;
}

.ASDOT::before {
    content: '<p>';
    font-family: 'La Belle Aurore', cursive;
    color: #515152;
    font-size: 1.3rem;
    position: relative;
    top: 75px;
    left: -575px;
}

.subtitle {
    color: #8D8D8D;
    font-family: sans-serif;
    font-size: 18px;
    padding-top: 18px;
    padding-left: 38px;

}

.subtitle::after {
    content: '</p>';
    font-family: 'La Belle Aurore', cursive;
    color: #515152;
    font-size: 1.3rem;
    position: relative;
    top: 23px;
    left: -260px;
}

.initial-tag-head::after {
    content: '<html>';
    font-family: 'La Belle Aurore', cursive;
    color: #515152;
    font-size: 1.3rem;
    position: relative;
    top: -200px;
    left: 8px;
}

.initial-tag-body::after {
    content: '<body>';
    font-family: 'La Belle Aurore', cursive;
    color: #515152;
    font-size: 1.3rem;
    position: relative;
    top: -220px;
    left: 19px;
}

/* Sections */
.about_section {

    display: flex;
    flex-direction: column;
    justify-content: center;

}

/* Media Query */
@media screen and (max-width: 980px) {
    .left_main {
        display: none;
    }
}

/* Skills jelly bounce */

.SS1 {
    position: relative;
    left: 30px;
}

.SK {
    position: relative;
    left: 16px;
}

.SI {
    position: relative;
    left: 2px;
}

.SL1 {
    position: relative;
    left: -8px;
}

.SL2 {
    position: relative;
    left: -20px;
}

.SS2 {
    position: relative;
    left: -31px;
}

.skills-content {
    font-size: 1.2rem;
    font-family: "Open Sans", sans-serif;
    line-height: 1.5;
    margin-top: 10px;
    margin-left: 38px;
}

/* Project jelly bounce */
.projects {
    display: flex;
    flex-direction: column;
}

.PP {
    position: relative;
    left: 30px;
}

.PR {
    position: relative;
    left: 16px;
}

.PO {
    position: relative;
    left: 2px;
}

.PJ {
    position: relative;
    left: -8px;
}

.PE {
    position: relative;
    left: -20px;
}

.PC {
    position: relative;
    left: -31px;
}

.PT {
    position: relative;
    left: -38px;
}

.PS {
    position: relative;
    left: -48px;
}

/* Achievment jelly bounce */
.achievments {
    display: flex;
    flex-direction: column;
}

.AA {
    position: relative;
    left: 30px;
}

.AC {
    position: relative;
    left: 16px;
}

.AH {
    position: relative;
    left: 4px;
}

.AI {
    position: relative;
    left: -8px;
}

.AE {
    position: relative;
    left: -22px;
}

.AV {
    position: relative;
    left: -33px;
}

.AM {
    position: relative;
    left: -43px;
}

.AE2 {
    position: relative;
    left: -53px;
}

.AN {
    position: relative;
    left: -62px;
}

.AT {
    position: relative;
    left: -74px;
}

.AS {
    position: relative;
    left: -83px;
}

/* Contact jelly bounce */
.contact {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.CC {
    position: relative;
    left: 30px;
}

.CO {
    position: relative;
    left: 16px;
}

.CN {
    position: relative;
    left: 4px;
}

.CT {
    position: relative;
    left: -8px;
}

.CA {
    position: relative;
    left: -22px;
}

.CC2 {
    position: relative;
    left: -33px;
}

.CT2 {
    position: relative;
    left: -43px;
}

/* Achievments Cards */
.achievments-grid{
    display: grid;
    grid-template-columns: auto auto auto;
    padding: 15px;
}
.achievments-card {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    transition: 0.3s;
    border-radius: 5px;
    padding: 20px;
    height: 35vh;
    overflow: scroll;
    /* font-size: 30px; */
    /* text-align: center; */
}

.achievments-card:hover {
    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.achievments-card-info {
    padding: 2px 16px;
    overflow: scroll;
}

.achievments-card-img {
    border-radius: 5px 5px 0 0;
    width: 18rem;
  

}
/* Projects Cards */
.projects-grid{
    display: grid;
    grid-template-columns: auto auto auto;
    padding: 15px;
}
.projects-card {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    transition: 0.3s;
    border-radius: 5px;
    padding: 20px;
    height: 35vh;
    overflow: scroll;
    /* font-size: 30px; */
    /* text-align: center; */
}

.projects-card:hover {
    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.projects-card-info {
    padding: 2px 16px;
    overflow: scroll;
}

.projects-card-img {
    border-radius: 5px 5px 0 0;
    width: 18rem;
  

}

